K8SFiles/platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels: 
         app: platformservice
    spec:
      containers:
         - name: platformservice
           image: ta5996u/platformservice:latest
