K8SFiles/platform-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
