K8SFiles/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: microservice.com
      http: 
        paths:
          - path: /api/Platform
            pathType: Prefix
            backend: 
              service:
                name: platform-clusterip-srv
                port:
                  number: 80
          - path: /api/command/Platforms
            pathType: Prefix
            backend: 
              service:
                name: commands-clusterip-srv
                port: 
                  number: 80
